# smart-fridge-temperature-control-devs

./: .gitignore  README.md
cadmium_generated/: .gitignore  CMakeLists.txt  Compressor.hpp  Controller.hpp  TempSensor.hpp  main.cpp  message_types.hpp
cadmium_generated/simulation_results/: simulation_result.txt
devs_graph/: COMP.json  CTRL.json  FCS.json  SFS.json  TS.json
docs/: DEVSmodelsForm.docx  SmartFridge_DEVS_Report.docx
scripts/: run_simulation.bat  run_simulation.sh
